fix links on mobile

--- a/src/components/organisms/Links/Links.scss
+++ b/src/components/organisms/Links/Links.scss
@@ -60,7 +60,7 @@
         justify-content: space-between;
 
         width: 100%;
-        max-width: 290px;
+        max-width: 360px;
       }
     }
 
